// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFocus() should return correct css for opts: %s 1`] = `
{
  "&::-moz-focus-inner": {
    "border": "0",
  },
  "&:focus": {
    "&:not(:focus-visible)": {
      "outlineColor": "transparent",
    },
    "outlineColor": "currentColor",
  },
  "outline": "transparent solid 1px",
  "outlineOffset": "2px",
}
`;

exports[`getFocus() should return correct css for opts: { color: 'deeppink' } 1`] = `
{
  "&::-moz-focus-inner": {
    "border": "0",
  },
  "&:focus": {
    "&:not(:focus-visible)": {
      "outlineColor": "transparent",
    },
    "outlineColor": "deeppink",
  },
  "outline": "transparent solid 1px",
  "outlineOffset": "2px",
}
`;

exports[`getFocus() should return correct css for opts: { offset: '5rem' } 1`] = `
{
  "&::-moz-focus-inner": {
    "border": "0",
  },
  "&:focus": {
    "&:not(:focus-visible)": {
      "outlineColor": "transparent",
    },
    "outlineColor": "currentColor",
  },
  "outline": "transparent solid 1px",
  "outlineOffset": "5rem",
}
`;
